--- a/html1/css/about.html
+++ b/html1/css/about.html
@@ -7,18 +7,18 @@
         <header>
             <div class="main">
                 <ul>
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="Edu.html">Educational Qualification</a></li>
+                    <li ><a href="index.html">Home</a></li>
+                    <li class="active"><a href="about.html">About</a></li>
+                    <li><a href="Edu.html">Project Details</a></li>
                     <li><a href="tech.html">Technical Knowledge</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
 
 <body>
-<header class='masthead'>
-    <p class='masthead-intro'>Hi I'm</p>
-    <h1 class='masthead-heading'>N S S Charan!!!</h1>
+<header class='mhead'>
+    <p class='mhead-intro'>Hi I'm</p>
+    <h1 class='mhead-heading'>N S S Charan!!!</h1>
   </header>
   <section class="introduction-section">
       <h1>Introduction</h1>
@@ -31,6 +31,9 @@
   </section>
   <section class="questions-section">
       <h1>More About Me</h1>
+       <h2>Career Objective</h2>
+      <p>To work in a learning and challenging environment where I can enhance my skills and utilize my knowledge to be the best of my abilities and contribute positively to my personal growth as well as growth of the organization.
+      
       <h2>What are your favorite hobbies?</h2>
       <p>My favorite hobby is building things on the internet.Watching videos in youtube and I'm Crazy about Movies irrespective of Language.</p>
       <h2>What's your dream job?</h2>
@@ -58,7 +61,7 @@
 
 
   <footer class="content-footer">
-      <p> Say hi to me on these social network:</p>
+      <h3> Say hi to me on these social network:</h3>
       <ul class="social">
          <li><a class="css-is-deranged" href="https://twitter.com/Saisricharan99?s=08">TWITTER</a></li>
          <li><a class="css-is-deranged" href="https://www.linkedin.com/in/n-s-s-charan-chinthapalli-88260814a/">LINKEDIN PROFILE</a></li>
