--- a/html1/css/index.html
+++ b/html1/css/index.html
@@ -10,7 +10,7 @@
                 <ul>
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="Edu.html">Educational Qualification</a></li>
+                    <li><a href="Edu.html">Project Details</a></li>
                     <li><a href="tech.html">Technical Knowledge</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
