--- a/html1/css/Edu.html
+++ b/html1/css/Edu.html
@@ -138,9 +138,9 @@ tr:hover {background-color:skyblue;}
       <tr>
         <td>Minor</td>
         <td>MSIT</td>
-        <td>Deques</td>
-        <td>Java</td>
-        <td>2021</td>
+        <td>Data Scraping</td>
+        <td>Python</td>
+        <td>2020</td>
 
       </tr>
       </th>
@@ -178,8 +178,15 @@ If no one wins, then the game is said to be drawn.
 These are the main concepts of object-oriented programming.</p>
 
 <br></br>
-<p><b>Deques<b></p>
-
+<p><b>Data Scraping:</b></p>
+<p>We see a lot of data in websites on the Internet. However,manually analysing the data specified in website data is difficult.
+To extract the data we use web scraping. Web scraping is a process of extracting the data from a website and generating insights from the data. 
+Web scraping is one of the projects where I experienced a lot of difficulties in completing the project.
+Extracting of data was done easily and quickly. However, the main problem we faced was, at the end of the project,when we needed to get an insight as well as display the information in the form of a histogram.
+But we tried all kinds of methods to remove the string values from a column which is necessary to conclude the project, however we finally converted it into string but we still faced the same problem.After hours of analysing this problem we found a column containing a string literal i.e.. “ 
+ these literal wasn't visible  in huge data.A string literal,created the whole problem.. In the end we dropped the column then the project was concluded in the final 10 minutes of submission time.
+Due to a single literal we wasted more than 12 hours, in the meantime we could have worked on the next project.
+</p>
 <br></br>
 <br></br>
   </div>
